data/forge_javadoc/1.9.4/processed/net_minecraft_entity_monster_EntitySnowman.md
# EntitySnowman

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.EntityLivingBase → net.minecraft.entity.EntityLiving → net.minecraft.entity.EntityCreature → net.minecraft.entity.monster.EntityGolem → net.minecraft.entity.monster.EntitySnowman

## Class signature

```java
public class EntitySnowman extends EntityGolem implements IRangedAttackMob
```

## Methods

- `protected void applyEntityAttributes()`
- `void attackEntityWithRangedAttack(EntityLivingBase target, float p_82196_2_)`
- `protected void entityInit()`
- `protected SoundEvent getAmbientSound()`
- `protected SoundEvent getDeathSound()`
- `float getEyeHeight()`
- `protected SoundEvent getHurtSound()`
- `protected ResourceLocation getLootTable()`
- `protected void initEntityAI()`
- `boolean isPumpkinEquipped()`
- `void onLivingUpdate()`
- `protected boolean processInteract(EntityPlayer player, EnumHand hand, ItemStack stack)`
- `void setPumpkinEquipped(boolean pumpkinEquipped)`

## Fields

- `EntitySnowman`